--- a/css/estilos.css
+++ b/css/estilos.css
@@ -93,7 +93,7 @@ input {
     margin-bottom: 4px;
 }
 
-.entra-sala, .sai-sala {
+.sala {
     background-color: #DCDCDC;
     width: 375px;
     height: 40px;
