--- a/css/estilos.css
+++ b/css/estilos.css
@@ -61,7 +61,9 @@ img {
     background-color: pink;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     height: 481px;
+    font-weight: 400px;
 
     margin-top:106px;
     
@@ -81,6 +83,8 @@ input {
 
 .conversa-todos {
     background-color: #FFFFFF;
+    display: flex;
+    align-items: center;
     width: 375px;
     height: 40px;
     margin-bottom: 4px;
@@ -88,6 +92,8 @@ input {
 
 .reservado {
     background-color:#FFDEDE;
+    display: flex;
+    align-items: center;
     width: 375px;
     height: 40px;
     margin-bottom: 4px;
@@ -95,7 +101,20 @@ input {
 
 .sala {
     background-color: #DCDCDC;
+    display: flex;
+    align-items: center;
     width: 375px;
     height: 40px;
     margin-bottom: 4px;
+}
+
+.time {
+    color:#AAAAAA;
+    line-height: 16px;
+    margin-right: 5px;
+    
+}
+
+.name {
+    font-weight: 700px;
 }
